# Auto-ML

./: .all-contributorsrc  .gitignore  Auto_ML_CNN_Modelipynb.ipynb  DEPLOYMENT_GUIDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  requirements.txt
backend/: .dockerignore  Dockerfile  Jenkinsfile  README.md  big_query.py  data.csv  download_test_random_data.pickle  main.py  pyproject.toml  sample_contacts.csv  scoring_grid_03d633f5-ad9c-45c4-804e-7e31fd389ca1.csv  scoring_grid_0713cba5-2250-4b6e-9a9f-fa8e1da3b23a.csv  scoring_grid_0b031fae-92ed-4736-96ab-a401461f6580.csv  scoring_grid_13a9cf64-d8a2-4889-8b95-a2f1d38ff5c1.csv  scoring_grid_1bcc41cb-9b78-4da7-8f9b-ee51298c7430.csv  scoring_grid_20970aa5-34ab-40af-b396-cb7bc3573e4c.csv  scoring_grid_249d3428-0fc5-459f-a61d-5abc8c403d19.csv  scoring_grid_2599fa18-23c4-4d4b-b3e0-863279eadfc4.csv  scoring_grid_273952f1-b2a8-463b-86fd-53250f1a3c73.csv  scoring_grid_2edc96b2-1a97-4815-9ab2-a35dd6b74b10.csv  scoring_grid_328a1e8f-dd75-4566-aa10-d8b484120c66.csv  scoring_grid_3295c720-74a3-4e71-a695-a99a7951a54f.csv  scoring_grid_359c3404-fc35-4960-9fd6-f17937ed7147.csv  scoring_grid_373e298f-4654-4c16-b1ed-76354b685ecb.csv  scoring_grid_3ae6c52e-e30b-447a-8e96-38919b5fd37d.csv  scoring_grid_3b951122-2115-4692-b31f-3046c163ae91.csv  scoring_grid_3e22e75f-b9c8-4b9e-9ecb-ce0c33c5a398.csv  scoring_grid_472b57cc-517f-4984-bcdb-227cbd04ce8e.csv  scoring_grid_48f4b943-77ab-4103-a5bd-78aaaf4de4d6.csv  scoring_grid_4dd02110-f778-4f1c-bea7-dec529c3b946.csv  scoring_grid_561e1c82-70b5-499e-b5a0-672831a1da9a.csv  (+74 more)
(+91 files in other folders)
