[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew Bovbel <andrew@bovbel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
google-cloud-storage = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"