[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew Bovbel <andrew@bovbel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.104.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
google-cloud-storage = "*"
google-cloud-bigquery = "*"
python-multipart = "*"
pytest = "^8.0.0"
joblib = "^1.3.2"
kaleido = "0.2.1"
pycaret = "^3.2.0"
ydata-profiling = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
